# developing-nanoGPT2-fineweb

./: LICENSE  Makefile  README.md  environment.yml  pyproject.toml
custom_nanogpt2_fineweb/: __init__.py  dataset.py  features.py  plots.py
custom_nanogpt2_fineweb/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
logs/: log  train_log.txt
src/: generate.py  train.py
src/config/: config.yaml  config_inference.yaml  setup.py
src/model/: gpt2_model.py  transformer_blocks.py
src/preprocess/: manager_data.py
