[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "custom_nanogpt2_fineweb"
version = "0.0.1"
description = "Developing a custom GPT-2 from scratch using PyTorch and the EduFineWeb dataset."
authors = [
  { name = "Neemias Buc\u00e9li" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["custom_nanogpt2_fineweb"]
force_sort_within_sections = true
